# libosmscout

./: .clang-tidy  .gitignore  .travis.yml  .uncrustify  AGENTS.md  CMakeLists.txt  CODING_STYLE.md  LICENSE  Makefile  README.Apple.txt  README.VisualStudio.txt  README.md  appveyor.yml  circle.yml  conanfile.txt  cspell.json  doxygen.cfg  jreleaser.yaml  jreleaser.yml  meson.build  meson_options.txt  pkgconfig-template.pc.in  setupAutoconf.sh  setupMSYS2.sh  sonar-project.properties  vcpkg_full.json  vcpkg_medium.json  vcpkg_minimum.json  wercker.yml
BasemapImport/: AUTHORS  CMakeLists.txt  configure.ac  meson.build
BasemapImport/src/: BasemapImport.cpp  Config.h.cmake  Makefile.am
Demos/: .gitignore  CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac  configure.ac~  demo.qrc  meson.build
Demos/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Demos/include/: DrawMap.h  PositionSimulator.h  QtDemoApp.h
Demos/m4/: ax_check_glut.m4
Demos/qml/: ElevationProfileChart.qml  NavigationSimulation.qml  PlaceInput.qml  RoutingParameters.qml
Demos/src/: AddressLookup.cpp  Coverage.cpp  DrawMap.cpp  DrawMapAgg.cpp  DrawMapAll.cpp  DrawMapAllOSX.mm  DrawMapCairo.cpp  DrawMapDirectX.cpp  DrawMapGDI.cpp  DrawMapOSX.mm  DrawMapOpenGL.cpp  DrawMapQt.cpp  DrawMapSVG.cpp  DumpData.cpp  DumpOSS.cpp  ElevationProfile.cpp  ElevationProfileChart.cpp  GpxImport.cpp  GpxPipe.cpp  LocationDescription.cpp  LocationLookup.cpp  LocationLookupForm.cpp  LookupPOI.cpp  LookupText.cpp  Makefile.am  Makefile.am~  Makefile.in  Navigation.cpp  Navigation.h  NavigationSimulation.cpp  NavigationSimulator.cpp  POILookupForm.cpp  PerformanceTest.cpp  PerformanceTestConfig.h.cmake  PositionSimulator.cpp  QtDemoApp.cpp  QtWidgetsDemoApp.cpp  ResourceConsumption.cpp  ResourceConsumptionQt.cpp  ReverseLocationLookup.cpp  (+7 more)
Documentation/: Android_Qt.txt  CMake.txt  CMakeLists.txt  Doxyfile.cmake  PerformanceTuning.txt  ProcessingResult.txt  README.Apple.txt  README.Java.txt  README.MSYS2.txt  README.VisualStudio.txt  Resources.txt  StyleSheetSyntax.txt  VehiclesAndAccess.txt  Vortrag.odp
DumpData/: CMakeLists.txt  autogen.sh  configure.ac  meson.build
DumpData/src/: DumpData.cpp  Makefile.am
Import/: .gitignore  CMakeLists.txt  Makefile.am  PerformanceTuning.txt  boundaries.oss  configure.ac  map.ost  map.ost.xml  meson.build  motorways.oss  railways.oss  standard.oss  standard.oss.xml  style.xml  types.xml
Import/src/: Import.cpp  Makefile.am  Print.cpp
MCPServer/: CMakeLists.txt  README  README.md  initialized.json  meson.build  tools.json
MCPServer/data/: capabilities.json  openapi.json  tools.json
MCPServer/src/: LocationDescriptionMapper.cpp  LocationDescriptionMapper.h  LocationDescriptionTool.cpp  LocationDescriptionTool.h  MCPServer.cpp  VersionTool.cpp  VersionTool.h
OSMScout/: Makefile.am  OSMScout.pro  configure.ac  moc.mk
OSMScout/src/: CitySearchDialog.cpp  CitySearchDialog.h  DBThread.cpp  DBThread.h  MainWindow.cpp  MainWindow.h  Makefile.am  MapWidget.cpp  MapWidget.h  OSMScout.cpp  RoutingDialog.cpp  RoutingDialog.h  SearchLocationDialog.cpp  SearchLocationDialog.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h
OSMScout2/: .gitignore  AUTHORS  CMakeLists.txt  OSMScout.pro  README  README.md  buildAndroidPackage.sh  meson.build  res.qrc  res5.qrc  res6.qrc  translations.pro
OSMScout2/android/: AndroidManifest.xml
OSMScout2/qml/: AboutDialog.qml  AvailableMaps.qml  MapDownloadDialog.qml  NavigationSimulation.qml  RoutingDialog.qml  SearchDialog.qml  SearchGeocodeDialog.qml  SearchLocationDialog.qml  main.qml
OSMScout2/qml5/: AboutDialog.qml  MapDownloadDialog.qml
OSMScout2/qml6/: SearchDialog.qml  VoiceDownloadDialog.qml
OSMScout2/resources/: map-providers.json  online-tile-providers.json  voice-providers.json
OSMScout2/src/: AppSettings.cpp  AppSettings.h  DBThread.cpp  DBThread.h  MainWindow.cpp  MapWidget.cpp  MapWidget.h  OSMScout.cpp  PositionSimulator.cpp  PositionSimulator.h  RoutingModel.cpp  SearchLocationModel.cpp  SearchLocationModel.h  Settings.cpp  SettingsDialog.cpp  Theme.cpp  Theme.h
OSMScout2/translations/: cs.ts  en.ts  meson.build
OSMScoutOpenGL/: CMakeLists.txt  README.md  meson.build
OSMScoutOpenGL/src/: OSMScoutOpenGL.cpp
PublicTransportMap/: CMakeLists.txt  meson.build
PublicTransportMap/src/: PublicTransportMap.cpp
StyleEditor/: CMakeLists.txt  README  StyleEditor.pro  StyleEditor.qrc  StyleEditor_515.qrc  StyleEditor_640.qrc  meson.build  qtquickcontrols2.conf  res.qrc
StyleEditor/qml/: MapControl.qml  SearchGeocodeDialog.qml  SearchLocationDialog.qml  TextEditor.qml  main.qml  settings.qml
StyleEditor/qml_515/: MapControl.qml  SearchGeocodeDialog.qml  TextEditor.qml  TextEditor.qml.bak  main.qml
StyleEditor/qml_640/: AboutDialog.qml  MapControl.qml  SearchGeocodeDialog.qml  SearchLocationDialog.qml  TextEditor.qml  Units.qml
StyleEditor/resources/: online-tile-providers.json
StyleEditor/src/: DBThread.cpp  DBThread.h  DocumentHandler.cpp  DocumentHandler.h  FileIO.cpp  FileIO.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  RoutingModel.cpp  RoutingModel.h  SearchLocationModel.cpp  SettingsDialog.cpp  SettingsDialog.h  StyleAnalyser.cpp  StyleAnalyser.h  StyleEditor.cpp
Tests/: CMakeLists.txt  LocationTest.olt  configure.ac  meson.build  routing-verify.sh
Tests/data/: testregion-generate.sh  testregion.poly
Tests/include/: ClientQtThreading.h  DownloaderTest.h  DrawWindow.h  LaneEvaluationCommon.h  LaneEvaluationCompare.h  TestMain.h  TestRunner.h  TestSub.h  TestWay.h  catch.hpp
Tests/scripts/: recompute-routes.sh
Tests/src/: AccessParse.cpp  AccessParseTest.cpp  AsyncProcessing.cpp  AsyncProcessingTest.cpp  AsyncWorker.cpp  Base64.cpp  Bearing.cpp  BearingTest.cpp  BitsAndBytesNeeded.cpp  ByteTest.cpp  CachePerformance.cpp  CalculateResolution.cpp  (+87 more)
TravelJinni/: Makefile.am  README  configure.ac
WellScoutedRoute/: meson.build
libosmscout-binding/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  pom.xml
(+2369 files in other folders)
